--- a/references.bib
+++ b/references.bib
@@ -13,6 +13,19 @@
 }
 
 
+@book{grimmer_text_2022,
+	address = {Princeton Oxford},
+	title = {Text as data: a new framework for machine learning and the social sciences},
+	isbn = {978-0-691-20799-5 978-0-691-20755-1 978-0-691-20754-4},
+	shorttitle = {Text as data},
+	language = {eng},
+	publisher = {Princeton University Press},
+	author = {Grimmer, Justin and Roberts, Margaret E. and Stewart, Brandon M.},
+	year = {2022},
+}
+
+
+
 @article{boumans_taking_2015,
 	title = {Taking {Stock} of the {Toolkit}},
 	volume = {4},
@@ -65,3 +78,123 @@
   pages     = {142--150},
   url       = {http://www.aclweb.org/anthology/P11-1015}
 }
+
+
+@article{king_computerassisted_2017,
+	title = {Computer‐{Assisted} {Keyword} and {Document} {Set} {Discovery} from {Unstructured} {Text}},
+	volume = {61},
+	issn = {0092-5853, 1540-5907},
+	url = {https://onlinelibrary.wiley.com/doi/10.1111/ajps.12291},
+	doi = {10.1111/ajps.12291},
+	language = {en},
+	number = {4},
+	urldate = {2024-06-13},
+	journal = {American Journal of Political Science},
+	author = {King, Gary and Lam, Patrick and Roberts, Margaret E.},
+	month = oct,
+	year = {2017},
+	pages = {971--988},
+}
+
+
+@article{langer_political_2021,
+	title = {Political {Agenda} {Setting} in the {Hybrid} {Media} {System}: {Why} {Legacy} {Media} {Still} {Matter} a {Great} {Deal}},
+	volume = {26},
+	issn = {1940-1612, 1940-1620},
+	shorttitle = {Political {Agenda} {Setting} in the {Hybrid} {Media} {System}},
+	url = {http://journals.sagepub.com/doi/10.1177/1940161220925023},
+	doi = {10.1177/1940161220925023},
+	language = {en},
+	number = {2},
+	urldate = {2024-06-13},
+	journal = {The International Journal of Press/Politics},
+	author = {Langer, Ana Ines and Gruber, Johannes B.},
+	month = apr,
+	year = {2021},
+	pages = {313--340},
+}
+
+
+@article{Hilte2016,
+	title = {A {Dictionary}-based {Approach} to {Racism} {Detection} in {Dutch} {Social} {Media}},
+	url = {https://arxiv.org/pdf/1608.08738},
+	journal = {Proceedings of the Workshop on Text Analytics for Cybersecurity and Online Safety (TA-COS 2016)},
+	author = {Tulkens, Stéphan and Hilte, Lisa and Lodewyckx, Elise and Verhoeven, Ben and Daelemans, Walter},
+	year = {2016},
+	note = {arXiv: 1608.08738},
+	keywords = {computational stylometry, dictionary-based approaches, racism, word2vec},
+	pages = {11--17},
+}
+
+
+@article{langer_bring_2018,
+	title = {Bring back the party: personalisation, the media and coalition politics},
+	volume = {41},
+	issn = {0140-2382, 1743-9655},
+	shorttitle = {Bring back the party},
+	url = {https://www.tandfonline.com/doi/full/10.1080/01402382.2017.1354528},
+	doi = {10.1080/01402382.2017.1354528},
+	language = {en},
+	number = {2},
+	urldate = {2024-06-13},
+	journal = {West European Politics},
+	author = {Langer, Ana Ines and Sagarzazu, Iñaki},
+	month = mar,
+	year = {2018},
+	pages = {472--495},
+}
+
+
+
+@article{van_atteveldt_validity_2021,
+	title = {The {Validity} of {Sentiment} {Analysis}: {Comparing} {Manual} {Annotation}, {Crowd}-{Coding}, {Dictionary} {Approaches}, and {Machine} {Learning} {Algorithms}},
+	volume = {15},
+	issn = {1931-2458, 1931-2466},
+	shorttitle = {The {Validity} of {Sentiment} {Analysis}},
+	url = {https://www.tandfonline.com/doi/full/10.1080/19312458.2020.1869198},
+	doi = {10.1080/19312458.2020.1869198},
+	language = {en},
+	number = {2},
+	urldate = {2024-06-13},
+	journal = {Communication Methods and Measures},
+	author = {Van Atteveldt, Wouter and Van Der Velden, Mariken A. C. G. and Boukes, Mark},
+	month = apr,
+	year = {2021},
+	pages = {121--140},
+}
+
+
+
+@article{boukes_whats_2020,
+	title = {What’s the {Tone}? {Easy} {Doesn}’t {Do} {It}: {Analyzing} {Performance} and {Agreement} {Between} {Off}-the-{Shelf} {Sentiment} {Analysis} {Tools}},
+	volume = {14},
+	issn = {1931-2458, 1931-2466},
+	shorttitle = {What’s the {Tone}?},
+	url = {https://www.tandfonline.com/doi/full/10.1080/19312458.2019.1671966},
+	doi = {10.1080/19312458.2019.1671966},
+	language = {en},
+	number = {2},
+	urldate = {2024-06-13},
+	journal = {Communication Methods and Measures},
+	author = {Boukes, Mark and Van De Velde, Bob and Araujo, Theo and Vliegenthart, Rens},
+	month = apr,
+	year = {2020},
+	pages = {83--104},
+}
+
+
+
+@misc{gonzalez-bailon_signals_2015,
+	address = {Rochester, NY},
+	type = {{SSRN} {Scholarly} {Paper}},
+	title = {Signals of {Public} {Opinion} in {Online} {Communication}: {A} {Comparison} of {Methods} and {Data} {Sources}},
+	shorttitle = {Signals of {Public} {Opinion} in {Online} {Communication}},
+	url = {https://papers.ssrn.com/abstract=2558788},
+	language = {en},
+	urldate = {2024-06-13},
+	author = {González-Bailón, Sandra and Paltoglou, Georgios},
+	month = feb,
+	year = {2015},
+	keywords = {content analysis, information diversity, lexicon-based methods, machine learning, sentiment analysis, text mining},
+}
+
